feat: configuration rabbitmq and creating messages sales